--- a/src/main/resources/templates/views/lender/admin/write.html
+++ b/src/main/resources/templates/views/lender/admin/write.html
@@ -27,7 +27,7 @@
         </div>
         <div class="mt-3">
             <select name="cityId" id="city" class="form-select w-25">
-                <option value="null" selected>도시</option>
+                <option value="0" selected>도시</option>
                 <th:block th:each="city : ${cityList}">
                     <option th:value="${city.id}" th:text="${city.city}"></option>
                 </th:block>
