--- a/src/main/resources/templates/views/camp/admin/camping/list.html
+++ b/src/main/resources/templates/views/camp/admin/camping/list.html
@@ -23,7 +23,7 @@
 <th:block th:insert="~{common/header::header}"></th:block>
 
 <div class="container mt-3">
-    <h2>내 캠핑장 목록</h2>
+    <h2>내 캠핑장 목록</h2> <a class="btn btn-outline-dark" th:href="@{/camp/admin/camping/write}">캠핑장 등록</a>
     <hr>
 
     <!-- 목록 -->
@@ -46,11 +46,8 @@
     </table>
     <!-- 목록 -->
 
-    <div class="row">
-        <div class="col-12">
-            <a class="btn btn-outline-dark" th:href="@{/camp/admin/camping/write}">캠핑장 등록</a>
-        </div>
-    </div>
+
+
 </div>
 </body>
 </html>
