--- a/src/main/resources/templates/views/camp/admin/campsite/list.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/list.html
@@ -26,7 +26,7 @@
     <h2>목록 - [[${dto.camping.camp_name}]]</h2>
     <hr>
 </div>
-</th:block>
+
     <!-- 목록 -->
     <table class="table table-hover">
         <thead class="table-success">
@@ -37,10 +37,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="dto : ${list}">
-            <td><a th:href="@{/camp/admin/campsite/detail(id=${dto.id})}">[[${dto.number}]]</a> </td>
-            <td>[[${dto.content}]]</td>
-            <td>[[${dto.price}]]</td>
+        <tr th:each="cs : ${list}">
+            <td><a th:href="@{/camp/admin/campsite/detail(id=${dto.id})}">[[${cs.number}]]</a> </td>
+            <td>[[${cs.content}]]</td>
+            <td>[[${cs.price}]]</td>
         </tr>
         </tbody>
     </table>
@@ -48,10 +48,11 @@
 
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-outline-dark" th:href="@{/camp/admin/campsite/write}">캠핑장 구역 등록</a>
+            <a class="btn btn-outline-dark" th:href="@{/camp/admin/campsite/write(id=${dto.camping.id})}">캠핑장 구역 등록</a>
         </div>
     </div>
 </div>
+</th:block>
 </body>
 </html>
 
