--- a/src/main/resources/templates/views/camp/reserve.html
+++ b/src/main/resources/templates/views/camp/reserve.html
@@ -53,9 +53,9 @@
 
                 <div class=detail>
                     <label>시작 날짜:</label>
-                    <input type="number" class="form-control" id="sdate" placeholder="입실 날짜" name="sdate" th:value="${sdate}">
+                    <input type="number" class="form-control" id="sdate" placeholder="입실 날짜" name="sdate" th:value="${sdate}" required>
                     <label>끝 날짜:</label>
-                    <input type="number" class="form-control" id="edate" placeholder="퇴실 날짜" name="edate" th:value="${edate}">
+                    <input type="number" class="form-control" id="edate" placeholder="퇴실 날짜" name="edate" th:value="${edate}" required>
                 </div>
 
                     <table class="table table-hover">
@@ -68,7 +68,6 @@
                         </thead>
                         <tbody>
                         <tr th:each="site : ${site}">
-<!--                            <td><input type="submit" name = "campsite" id = "campsite" th:value="${site.id}"></td>-->
                             <td th:value="${site.number}">[[${site.number}]]</td>
                             <td th:value="${site.content}" >[[${site.content}]]</td>
                             <td th:value="${site.price}">[[${site.price}]]</td>
